# server

./: Cargo.toml  README.md
.sqlx/: query-1427b806c6ac3836d9af9b80d6a76f322111e30e22c016a806a9dcfb1e7104c6.json  query-2ffef5726119946143e426cf878b343e7ff116b5710ffb0ad73b509439e028a2.json  query-360bbec3b4234f950502461c8c41edc462ae6e56255e5bd51b9951c4ba613eb7.json  query-3e92353dcce224bc8cca9add0b2963162ebacb4a9b64551be0d04dd8d1c37e56.json  query-46008a098a0a73ffa8ec524c67d6aafe7f98698fdc0df70385a933e154c5d212.json  query-51977e484b316c945d006a2af216926ea7625bd951a6e3061f2775ebbd429b43.json  query-53fb64dc215772b4703848e9ac64dc77aa54c78e407f3332a3f0fe8101429b41.json  query-5e55fa072cf772c6f70f95e919ed0e0b9c1937bb062541ba2de02a9eda19fea8.json  query-61c1061f9981b6115ee7ecb8f92634237de003ba0cc05fc08702c643fa2a61dd.json  query-635c95ec312ac574e4cde85ad64aa7d69648dc5b4f9e1cc458e23b8c5091dab6.json  query-66a8cad7042573353a0ea484eab4ee714ee66c7a082ea1becaf7fd90b34675d4.json  query-69e2bb05257393d26a1eedcfb55a7b7faac33cf5927f65a3afa1d514d2bdeb84.json  query-6daf655650563a070096a97bdb98545ed0ac8e412cfb10036f14d99516283637.json  query-70cc17f4969654ba6c7ebd3df55d514462c8032cd8a895c6f84a5f69e1c4912d.json  query-7499702e86f94faadfebd70e06ad47dab15b2af64b254b4f8c032db96c2981c1.json  (+17 more)
api/: Cargo.toml  README.md
api/src/: auth.rs  error.rs  main.rs  utils.rs
api/src/routes/: mod.rs
api/src/routes/posts/: create.rs  delete.rs  get_thread.rs  get_user.rs  mark_viewed.rs  mod.rs  scroll.rs
api/src/routes/users/: follow.rs  login.rs  me.rs  mod.rs  profile.rs  register.rs
bevy_db/: Cargo.toml  README.md
ekranoplan/: Cargo.toml  README.md
ekranoplan/src/: auth.rs  error.rs  main.rs  snow.rs  utils.rs
ekranoplan/src/routes/: mod.rs  x15.rs
ekranoplan/src/routes/rooms/: mod.rs
ekranoplan/src/routes/tracks/: bookmark.rs  create.rs  delete.rs  get_thread.rs  get_user.rs  mark_viewed.rs  mod.rs  react.rs  scroll.rs  unbookmark.rs  unreact.rs
ekranoplan/src/routes/users/: avatar.rs  banner.rs  bookmarks.rs  edit.rs  follow.rs  get_self.rs  login.rs  me.rs  mod.rs  new_assets.rs  profile.rs  register.rs  unfollow.rs
(+10 files in other folders)
