[package]
name = "ekranoplan"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
argon2.workspace = true
axum.workspace = true
axum_thiserror.workspace = true
jsonwebtoken.workspace = true
lazy_static.workspace = true
regex.workspace = true
serde_valid.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tower-http = {version = "0.6.2", features = ["cors"]}
dotenvy = "0.15.7"
serde.workspace = true
models.workspace = true
vodozemac = "0.8.1"
nanoid = "0.4.0"
futures = "0.3.31"
mimalloc = { version = "*", features = ["secure"] }
s3-tokio = "0.39.4"
image = "0.25.5"
libcaesium = "0.17.1"
snowdon = "0.2.0"
